[gd_scene load_steps=13 format=3 uid="uid://co7hvwwi4fncn"]

[ext_resource type="Script" path="res://ui/main_menu/pages/select_space_template.gd" id="1_3msu6"]
[ext_resource type="PackedScene" uid="uid://cfnluk7d6osvy" path="res://ui/main_menu/common/space_template_panel.tscn" id="2_qcrdk"]
[ext_resource type="Texture2D" uid="uid://k4oe0d3tax4n" path="res://ui/art/back.svg" id="3_1kfcj"]
[ext_resource type="Shader" path="res://ui/common/shaders/ui_blurr.gdshader" id="3_fsy2h"]
[ext_resource type="FontFile" uid="uid://dhpbqmk3ulim4" path="res://ui/common/fonts/montserrat/montserrat_bold.ttf" id="3_ol875"]
[ext_resource type="Texture2D" uid="uid://bpdhjrlxnx4ta" path="res://ui/art/rolling_spinner.svg" id="6_hiykg"]

[sub_resource type="FontVariation" id="FontVariation_kbvc8"]
base_font = ExtResource("3_ol875")
spacing_glyph = 3

[sub_resource type="LabelSettings" id="LabelSettings_23jut"]
font = SubResource("FontVariation_kbvc8")
font_size = 12

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3ns3p"]
shader = ExtResource("3_fsy2h")
shader_parameter/blur = 1.072
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/strength = 0.1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8kgsp"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 40.0
expand_margin_top = 40.0
expand_margin_right = 40.0
expand_margin_bottom = 40.0

[sub_resource type="Animation" id="Animation_n4yvx"]
resource_name = "Roll"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2nhbe"]
_data = {
"Roll": SubResource("Animation_n4yvx")
}

[node name="SelectTemplate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3msu6")
template_panel = ExtResource("2_qcrdk")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ol875")
theme_override_font_sizes/font_size = 40
text = "Create New Space"
horizontal_alignment = 1

[node name="Description" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Choose A Base Theme to Get Started"
label_settings = SubResource("LabelSettings_23jut")
horizontal_alignment = 1
uppercase = true

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 4

[node name="FillContainer" type="MarginContainer" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200

[node name="FillToParentContainer" type="PanelContainer" parent="VBoxContainer/FillContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_3ns3p")
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_8kgsp")

[node name="GridScrollContainer" type="ScrollContainer" parent="VBoxContainer/FillContainer/FillToParentContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Grid" type="HFlowContainer" parent="VBoxContainer/FillContainer/FillToParentContainer/GridScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
alignment = 1

[node name="LoadingSpinner" type="TextureRect" parent="VBoxContainer/FillContainer/FillToParentContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_hiykg")
expand_mode = 1
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/FillContainer/FillToParentContainer/LoadingSpinner"]
autoplay = "Roll"
libraries = {
"": SubResource("AnimationLibrary_2nhbe")
}

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 4

[node name="BackButton" type="TextureButton" parent="."]
modulate = Color(0.0705882, 1, 0.843137, 1)
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
offset_left = 25.0
offset_top = 25.0
offset_right = 65.0
offset_bottom = 65.0
texture_normal = ExtResource("3_1kfcj")
ignore_texture_size = true
stretch_mode = 5

[connection signal="visibility_changed" from="VBoxContainer/FillContainer/FillToParentContainer/GridScrollContainer" to="." method="_on_scroll_container_visibility_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_cancel_pressed"]
